--- a/frontend/admin/event-detail.html
+++ b/frontend/admin/event-detail.html
@@ -2,6 +2,8 @@
 <html lang="en" class="light">
   <head>
     <link rel="stylesheet" href="admin.css" />
+    <link rel="stylesheet" href="lib/bootstrap.min.css" />
+    <script src="lib/jquery.min.js"></script>
   </head>
 
   <body>
@@ -20,128 +22,184 @@
       </div>
       <div class="usr-panel">
         <button href="#">Logout</button>
-        <img src="./frontend/images/GuestIcon.svg" alt="guest-profile-icon" />
+        <img src="/frontend/images/GuestIcon.svg" alt="guest-profile-icon" />
       </div>
     </nav>
 
     <main>
       <div class="admin-container">
-        <h2 style="margin-top: 90px"><button class="btn" onclick="window.location.href = 'event.html'">&#x25c0;</button>Update Event</h2>
-
+        <h2 style="margin-top: 90px">
+          Update:
+          <span id="h3-title" style="color: #fe1e3c"></span>
+        </h2>
+        <hr />
         <div class="add-event">
-          <h3>Event Detail - Living the Living Book: Turning Up and Butter Making / ONLINE</h3>
-          <form id="add-event-form">
-            <label for="date">Event Name:</label><br />
-            <input type="text" class="input-text" id="member-name" placeholder="Event Name" required value="Living the Living Book: Turning Up and Butter Making / ONLINE" /> <br />
-            <label for="date">Event Image:</label><br />
-            <input type="file" class="input-text" style="width: 70%" />
-            <img style="width: 80px; margin-left: 24px" src="https://images.squarespace-cdn.com/content/v1/63bc104e8f7c476406bd6221/093f57bd-0a54-42a2-a3a0-bfe53d06fd59/5.png?format=1000w" />
-            <br />
-            <label for="date">Event Date:</label><br /><input type="date" id="date" class="date-picker" value="2025-03-10" /> <br />
-            <label for="date">Event Start Time:</label><br />
-            <select id="time" class="input-select">
-              <option value="00:00">12:00 AM</option>
-              <option value="00:30">12:30 AM</option>
-              <option value="01:00">1:00 AM</option>
-              <option value="01:30">1:30 AM</option>
-              <option value="02:00">2:00 AM</option>
-              <option value="02:30">2:30 AM</option>
-              <option value="03:00">3:00 AM</option>
-              <option value="03:30">3:30 AM</option>
-              <option value="04:00">4:00 AM</option>
-              <option value="04:30">4:30 AM</option>
-              <option value="05:00">5:00 AM</option>
-              <option value="05:30">5:30 AM</option>
-              <option value="06:00">6:00 AM</option>
-              <option value="06:30">6:30 AM</option>
-              <option value="07:00">7:00 AM</option>
-              <option value="07:30">7:30 AM</option>
-              <option value="08:00">8:00 AM</option>
-              <option value="08:30">8:30 AM</option>
-              <option value="09:00">9:00 AM</option>
-              <option value="09:30">9:30 AM</option>
-              <option value="10:00">10:00 AM</option>
-              <option value="10:30">10:30 AM</option>
-              <option value="11:00">11:00 AM</option>
-              <option value="11:30">11:30 AM</option>
-              <option value="12:00">12:00 PM</option>
-              <option value="12:30">12:30 PM</option>
-              <option value="13:00" selected>1:00 PM</option>
-              <option value="13:30">1:30 PM</option>
-              <option value="14:00">2:00 PM</option>
-              <option value="14:30">2:30 PM</option>
-              <option value="15:00">3:00 PM</option>
-              <option value="15:30">3:30 PM</option>
-              <option value="16:00">4:00 PM</option>
-              <option value="16:30">4:30 PM</option>
-              <option value="17:00">5:00 PM</option>
-              <option value="17:30">5:30 PM</option>
-              <option value="18:00">6:00 PM</option>
-              <option value="18:30">6:30 PM</option>
-              <option value="19:00">7:00 PM</option>
-              <option value="19:30">7:30 PM</option>
-              <option value="20:00">8:00 PM</option>
-              <option value="20:30">8:30 PM</option>
-              <option value="21:00">9:00 PM</option>
-              <option value="21:30">9:30 PM</option>
-              <option value="22:00">10:00 PM</option>
-              <option value="22:30">10:30 PM</option>
-              <option value="23:00">11:00 PM</option>
-              <option value="23:30">11:30 PM</option></select
-            ><br />
-            <label for="date">Event End Time:</label><br />
-            <select id="time" class="input-select">
-              <option value="00:00">12:00 AM</option>
-              <option value="00:30">12:30 AM</option>
-              <option value="01:00">1:00 AM</option>
-              <option value="01:30">1:30 AM</option>
-              <option value="02:00">2:00 AM</option>
-              <option value="02:30">2:30 AM</option>
-              <option value="03:00">3:00 AM</option>
-              <option value="03:30">3:30 AM</option>
-              <option value="04:00">4:00 AM</option>
-              <option value="04:30">4:30 AM</option>
-              <option value="05:00">5:00 AM</option>
-              <option value="05:30">5:30 AM</option>
-              <option value="06:00">6:00 AM</option>
-              <option value="06:30">6:30 AM</option>
-              <option value="07:00">7:00 AM</option>
-              <option value="07:30">7:30 AM</option>
-              <option value="08:00">8:00 AM</option>
-              <option value="08:30">8:30 AM</option>
-              <option value="09:00">9:00 AM</option>
-              <option value="09:30">9:30 AM</option>
-              <option value="10:00">10:00 AM</option>
-              <option value="10:30">10:30 AM</option>
-              <option value="11:00">11:00 AM</option>
-              <option value="11:30">11:30 AM</option>
-              <option value="12:00">12:00 PM</option>
-              <option value="12:30">12:30 PM</option>
-              <option value="13:00">1:00 PM</option>
-              <option value="13:30">1:30 PM</option>
-              <option value="14:00" selected>2:00 PM</option>
-              <option value="14:30">2:30 PM</option>
-              <option value="15:00">3:00 PM</option>
-              <option value="15:30">3:30 PM</option>
-              <option value="16:00">4:00 PM</option>
-              <option value="16:30">4:30 PM</option>
-              <option value="17:00">5:00 PM</option>
-              <option value="17:30">5:30 PM</option>
-              <option value="18:00">6:00 PM</option>
-              <option value="18:30">6:30 PM</option>
-              <option value="19:00">7:00 PM</option>
-              <option value="19:30">7:30 PM</option>
-              <option value="20:00">8:00 PM</option>
-              <option value="20:30">8:30 PM</option>
-              <option value="21:00">9:00 PM</option>
-              <option value="21:30">9:30 PM</option>
-              <option value="22:00">10:00 PM</option>
-              <option value="22:30">10:30 PM</option>
-              <option value="23:00">11:00 PM</option>
-              <option value="23:30">11:30 PM</option>
-            </select>
-            <br />
-            <button type="submit" class="btn" style="margin-top: 12px; margin-bottom: 12px">Update Event</button>
+          <form id="update-event-form" enctype="multipart/form-data" method="put" name="add-event-form">
+            <div class="form-group row">
+              <label class="col-2 col-form-label">Event Name:</label>
+              <div class="col-9">
+                <input type="text" class="form-control" id="title" placeholder="Event Name" name="title" required />
+              </div>
+            </div>
+
+            <div class="form-group row">
+              <label class="col-2 col-form-label">Event Image:</label>
+              <div class="col-7">
+                <input type="file" class="form-control" accept="image/png, image/jpeg" name="file" />
+              </div>
+              <div class="col-2">
+                <img id="image" style="width: 80%; margin-left: 12px" />
+              </div>
+            </div>
+
+            <div class="form-group row">
+              <label class="col-2 col-form-label" for="startDate">Event Start Date:</label>
+              <div class="col-3">
+                <input type="date" id="startDate" class="form-control" required name="start_date" />
+              </div>
+              <label class="col-2 col-form-label" for="endDate">Event End Date:</label>
+              <div class="col-3">
+                <input type="date" id="endDate" class="form-control" required name="end_date" />
+              </div>
+            </div>
+
+            <div class="form-group row">
+              <label class="col-sm-2 col-form-label" for="startTime">Event Start Time:</label>
+              <div class="col-sm-3">
+                <select id="startTime" class="form-control" required name="start_time">
+                  <option value="00:00">12:00 AM</option>
+                  <option value="00:30">12:30 AM</option>
+                  <option value="01:00">1:00 AM</option>
+                  <option value="01:30">1:30 AM</option>
+                  <option value="02:00">2:00 AM</option>
+                  <option value="02:30">2:30 AM</option>
+                  <option value="03:00">3:00 AM</option>
+                  <option value="03:30">3:30 AM</option>
+                  <option value="04:00">4:00 AM</option>
+                  <option value="04:30">4:30 AM</option>
+                  <option value="05:00">5:00 AM</option>
+                  <option value="05:30">5:30 AM</option>
+                  <option value="06:00">6:00 AM</option>
+                  <option value="06:30">6:30 AM</option>
+                  <option value="07:00">7:00 AM</option>
+                  <option value="07:30">7:30 AM</option>
+                  <option value="08:00">8:00 AM</option>
+                  <option value="08:30">8:30 AM</option>
+                  <option value="09:00">9:00 AM</option>
+                  <option value="09:30">9:30 AM</option>
+                  <option value="10:00">10:00 AM</option>
+                  <option value="10:30">10:30 AM</option>
+                  <option value="11:00">11:00 AM</option>
+                  <option value="11:30">11:30 AM</option>
+                  <option value="12:00">12:00 PM</option>
+                  <option value="12:30">12:30 PM</option>
+                  <option value="13:00">1:00 PM</option>
+                  <option value="13:30">1:30 PM</option>
+                  <option value="14:00">2:00 PM</option>
+                  <option value="14:30">2:30 PM</option>
+                  <option value="15:00">3:00 PM</option>
+                  <option value="15:30">3:30 PM</option>
+                  <option value="16:00">4:00 PM</option>
+                  <option value="16:30">4:30 PM</option>
+                  <option value="17:00">5:00 PM</option>
+                  <option value="17:30">5:30 PM</option>
+                  <option value="18:00">6:00 PM</option>
+                  <option value="18:30">6:30 PM</option>
+                  <option value="19:00">7:00 PM</option>
+                  <option value="19:30">7:30 PM</option>
+                  <option value="20:00">8:00 PM</option>
+                  <option value="20:30">8:30 PM</option>
+                  <option value="21:00">9:00 PM</option>
+                  <option value="21:30">9:30 PM</option>
+                  <option value="22:00">10:00 PM</option>
+                  <option value="22:30">10:30 PM</option>
+                  <option value="23:00">11:00 PM</option>
+                  <option value="23:30">11:30 PM</option>
+                </select>
+              </div>
+              <label class="col-sm-2 col-form-label" for="endTime">Event End Time:</label>
+              <div class="col-sm-3">
+                <select id="endTime" class="form-control" required name="end_time">
+                  <option value="00:00">12:00 AM</option>
+                  <option value="00:30">12:30 AM</option>
+                  <option value="01:00">1:00 AM</option>
+                  <option value="01:30">1:30 AM</option>
+                  <option value="02:00">2:00 AM</option>
+                  <option value="02:30">2:30 AM</option>
+                  <option value="03:00">3:00 AM</option>
+                  <option value="03:30">3:30 AM</option>
+                  <option value="04:00">4:00 AM</option>
+                  <option value="04:30">4:30 AM</option>
+                  <option value="05:00">5:00 AM</option>
+                  <option value="05:30">5:30 AM</option>
+                  <option value="06:00">6:00 AM</option>
+                  <option value="06:30">6:30 AM</option>
+                  <option value="07:00">7:00 AM</option>
+                  <option value="07:30">7:30 AM</option>
+                  <option value="08:00">8:00 AM</option>
+                  <option value="08:30">8:30 AM</option>
+                  <option value="09:00">9:00 AM</option>
+                  <option value="09:30">9:30 AM</option>
+                  <option value="10:00">10:00 AM</option>
+                  <option value="10:30">10:30 AM</option>
+                  <option value="11:00">11:00 AM</option>
+                  <option value="11:30">11:30 AM</option>
+                  <option value="12:00">12:00 PM</option>
+                  <option value="12:30">12:30 PM</option>
+                  <option value="13:00">1:00 PM</option>
+                  <option value="13:30">1:30 PM</option>
+                  <option value="14:00">2:00 PM</option>
+                  <option value="14:30">2:30 PM</option>
+                  <option value="15:00">3:00 PM</option>
+                  <option value="15:30">3:30 PM</option>
+                  <option value="16:00">4:00 PM</option>
+                  <option value="16:30">4:30 PM</option>
+                  <option value="17:00">5:00 PM</option>
+                  <option value="17:30">5:30 PM</option>
+                  <option value="18:00">6:00 PM</option>
+                  <option value="18:30">6:30 PM</option>
+                  <option value="19:00">7:00 PM</option>
+                  <option value="19:30">7:30 PM</option>
+                  <option value="20:00">8:00 PM</option>
+                  <option value="20:30">8:30 PM</option>
+                  <option value="21:00">9:00 PM</option>
+                  <option value="21:30">9:30 PM</option>
+                  <option value="22:00">10:00 PM</option>
+                  <option value="22:30">10:30 PM</option>
+                  <option value="23:00">11:00 PM</option>
+                  <option value="23:30">11:30 PM</option>
+                </select>
+              </div>
+            </div>
+
+            <div class="form-group row">
+              <label class="col-sm-2 col-form-label" for="startTime">Recurrence: </label>
+              <div class="col-sm-3">
+                <select id="recurrence" class="form-control" required name="recurrence">
+                  <option value="none">None</option>
+                  <option value="daily">Daily</option>
+                  <option value="weekly">Weekly</option>
+                  <option value="monthly">Monthly</option>
+                </select>
+              </div>
+              <label class="col-sm-2 col-form-label" for="endTime">Visibililty:</label>
+              <div class="col-sm-3">
+                <select id="visibility" class="form-control" name="visibility" required>
+                  <option value="public">Public</option>
+                  <option value="private">Private</option>
+                  <option value="members-only">Members-Only</option>
+                </select>
+              </div>
+            </div>
+
+            <div class="form-group row">
+              <label class="col-2 col-form-label">Event Description:</label>
+              <div class="col-9">
+                <textarea id="description" class="form-control" required name="description"></textarea>
+              </div>
+            </div>
+            <button class="btn" onclick="window.location.href = 'event.html'">Go Back</button>
+            <button type="submit" class="btn btn-primary mt-3 mb-3 float-right">Update Event</button>
           </form>
         </div>
       </div>
@@ -176,5 +234,41 @@
         </div>
       </div>
     </footer>
+
+    <script>
+      let searchParams = new URLSearchParams(window.location.search)
+      let eventId = searchParams.get('eventId')
+
+      $.get(`http://localhost:5000/events/${eventId}`, function (data) {
+        $('#h3-title').html(data.event.title)
+        $('#title').val(data.event.title)
+        $('#image').attr('src', `http://localhost:5000/uploads/${data.event.image_url}`)
+        $('#startDate').val(data.event.start_date)
+        $('#endDate').val(data.event.end_date)
+        $('#startTime').val(data.event.start_time.split(':')[0] + ':' + data.event.start_time.split(':')[1])
+        $('#endTime').val(data.event.end_time.split(':')[0] + ':' + data.event.end_time.split(':')[1])
+        $('#recurrence').val(data.event.recurrence)
+        $('#visibility').val(data.event.visibility)
+        $('#description').val(data.event.description)
+      })
+
+      $('#update-event-form').submit(function (e) {
+        e.preventDefault()
+        var formData = new FormData(this) // Create FormData object
+        $.ajax({
+          url: 'http://localhost:5000/events/' + eventId, // The URL where you want to send the POST request
+          type: 'PUT',
+          data: formData,
+          processData: false, // Prevent jQuery from processing the data
+          contentType: false, // Let the browser set the correct content type
+          success: function (response) {
+            alert('Event Updated successfully!')
+          },
+          error: function (xhr, status, error) {
+            alert('An error occurred: ' + error)
+          }
+        })
+      })
+    </script>
   </body>
 </html>
