yea yea yea yea

--- a/frontend/Members/UserDigitalContentExample.html
+++ b/frontend/Members/UserDigitalContentExample.html
@@ -62,7 +62,7 @@
     <nav class="navbar">
         <header class="nav-header">
             <div class="nav-image">
-                <img src="../frontend/images/TC_Logos-01.png" alt="PLACEHOLDER" />
+                <img src="../images/TC_Logos-01.png" alt="PLACEHOLDER" />
             </div>
         </header>
         <div class="nav-links">
@@ -76,8 +76,8 @@
         </div>
         <div class="usr-panel">
             <button href="#">Sign Up</button>
-            <img src="../frontend/images/EmptyBag.svg" alt="empty-shopping-bag" />
-            <img src="../frontend/images/GuestIcon.svg" alt="guest-profile-icon" />
+            <img src="../images/EmptyBag.svg" alt="empty-shopping-bag" />
+            <img src="../images/GuestIcon.svg" alt="guest-profile-icon" />
         </div>
     </nav>
 
